Styles done, need to fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  /* border: 2px solid red;  */
   font-family: "Inconsolata", monospace;
 }
 
@@ -29,6 +28,7 @@ body {
   font-weight: 400;
   font-size: 32px;
   line-height: 34px;
+  margin-left: 3.3rem;
 }
 
 #id-header .Linkedin {
@@ -213,7 +213,15 @@ body {
   color: #c6ccdf;
 }
 
+#id-projects .ProjectsContainer .ProjectsCardsContainer {
+  width: 1420px;
+  height: 389px;
+  display: flex;
+  gap: 4rem;
+}
+
 #id-card {
+  margin-top: 3.7rem;
   width: 307px;
   height: 388px;
 
@@ -240,4 +248,87 @@ body {
   justify-content: flex-end;
   width: 248px;
   height: 25px;
+}
+
+#id-card .ProjectTextContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  width: 244px;
+  height: 266px;
+}
+
+.CardContainer .ProjectCardTitle {
+  width: 244px;
+  height: 58px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+
+  color: #ffffff;
+}
+
+.ProjectTextContainer .ProjectCardDescription {
+  width: 244px;
+  height: 154px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+
+  color: #c6ccdf;
+}
+
+.ProjectTextContainer .ProjectCardFooter {
+  width: 244px;
+  height: 22px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 22px;
+  /* identical to box height, or 220% */
+
+  color: rgba(198, 204, 223, 0.6);
+}
+
+#id-footer {
+  height: 390px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#id-footer .FooterContainer {
+  height: 51px;
+  display: flex;
+}
+
+.FooterContainer .FooterName {
+  height: 34px;
+  font-family: "Inconsolata";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 34px;
+  color: #6ca3e1;
+}
+
+.FooterContainer .GoodbyeMessage {
+  height: 46px;
+
+  font-family: "Inconsolata";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 21px;
+
+  color: #c6ccdf;
 }
